# survaize

./: .copier-answers.yml  .env.example  .gitignore  AGENTS.md  README.md  development.md  installation.md  pyproject.toml
.github/: copilot-instructions.md
devtools/: build_frontend.py  lint.py
evals/: README.md  __init__.py  run_evals.py
evals/datasets/: case_metadata.py  pdf_to_questionnaire_dataset.py
evals/evaluators/: questionnaire_evaluators.py
examples/PopstanHouseholdSurvey/: PopstanHouseholdQuestionnaire.docx  PopstanHouseholdQuestionnaire.json
src/survaize/: __init__.py  main.py  survaize.py
src/survaize/config/: dirs.py  llm_config.py
src/survaize/convert/: converter.py
src/survaize/cspro/: __init__.py  dictionary.py  form.py  question_text.py
src/survaize/interpreter/: ai_interpreter.py  openai_recorder.py  scanned_questionnaire.py
src/survaize/model/: questionnaire.py
src/survaize/reader/: json_reader.py  pdf_reader.py  reader.py  reader_factory.py
src/survaize/web/: __init__.py
src/survaize/web/backend/: app.py  server.py
src/survaize/web/backend/api/: routes.py
src/survaize/web/frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/survaize/web/frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
src/survaize/web/frontend/src/__tests__/: App.test.tsx  QuestionItem.test.tsx  QuestionnaireDisplay.test.tsx
src/survaize/web/frontend/src/components/: QuestionItem.tsx  QuestionnaireComponents.tsx  QuestionnaireDisplay.tsx  QuestionnaireJson.tsx  RobotReadingAnimation.tsx  RobotReadingGraphic.tsx
src/survaize/web/frontend/src/hooks/: useApiService.ts
src/survaize/web/frontend/src/models/: questionnaire.schema.json  questionnaire.ts
src/survaize/web/frontend/src/services/: api.ts  logger.ts
src/survaize/writer/: cspro_writer.py  json_writer.py  writer.py  writer_factory.py
tests/: test_ai_interpreter.py  test_cspro_writer.py  test_merge_questionnaires.py  test_web_read.py
tests/fixtures/PopstanHouseholdSurvey/: PopstanHouseholdQuestionnaire.json
tests/fixtures/PopstanHouseholdSurvey/cspro/: PopstanHouseholdSurvey.dcf  PopstanHouseholdSurvey.ent  PopstanHouseholdSurvey.ent.apc  PopstanHouseholdSurvey.ent.mgf  PopstanHouseholdSurvey.ent.qsf  PopstanHouseholdSurvey.fmf
